[package]
name = "i1-ca"
version = "0.1.0"
edition = "2021"
description = "Certificate Authority for i1.is - air-gapped root, online intermediates"
license = "MIT OR Apache-2.0"
repository = "https://github.com/i1-is/i1"

[dependencies]
# Certificate generation (pure Rust, no OpenSSL)
rcgen = { version = "0.13", features = ["pem"] }

# Crypto primitives
ring = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pem = "3.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Error handling
thiserror = "1.0"

# Unique IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Base64 for export
base64 = "0.22"

[dev-dependencies]
tempfile = "3.10"
