[package]
name = "i1-shodan"
description = "Shodan provider for i1 threat intelligence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
i1-core = { workspace = true }
i1-providers = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
governor = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio-test = { workspace = true }

[lints]
workspace = true
